added stocks' prices fixing